# search-tech-sharing

./: .gitignore  Makefile  README.md  docker-compose.yml  example.env  pyproject.toml
docker/sqlserver/: Dockerfile
docs/: inso_data.md  name-search-briefing.md
docs/experiments/: fts-vs-like-2025-10-31.md  fts-vs-like-inso-2025-11-03.md
results/: fts_vs_like_inso_raw.txt  fts_vs_like_searchbenchmark_raw.txt
scripts/: create_fulltext.sql  create_fulltext_benchmark.sql  load_companies_from_csv.sql  load_inso_entities.sql  prepare_company_dataset.py  replicate_inso_entities.py  run_experiments.sql  run_experiments_benchmark.sql  sample_entities.sql  setup_database.sql  test_fulltext.sql  wait_for_sql.sh
service/: main.py
