[project]
name = "search-tech-sharing"
version = "0.1.0"
description = "SQL Server full-text search demo with benchmarks and FastAPI wrapper."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.30.0",
    "pyodbc==5.3.0",
    "pydantic==2.7.1",
]

[tool.uv]
cache-dir = ".uv-cache"

[tool.uv.workspace]
members = []
